priority blocking queue with grpc communication